--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 </head>
 <body >
    
-      <nav class="navbar navbar-expand-lg navbar-dark bg-transparent me-lg-auto">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">LOREM</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,25 +22,75 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ms-auto" >
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="#">Portofolio</a>
-                <a class="nav-link" href="#">About us</a>
-                <a class="nav-link" href="#">Contact</a>
-                <a class="nav-link" href="#">Todos</a>
+                <a class="nav-link active" aria-current="page" href="#Home">Home</a>
+                <a class="nav-link" aria-current="page" href="#Portofolio">Portofolio</a>
+                <a class="nav-link" href="#AboutUs">About us</a>
+                <a class="nav-link" href="#Contact">Contact</a>
+                <a class="nav-link" href="#Todos">Todos</a>
               </div>
             </div>
           </div>
       </nav>
+    <section class="align-item-center py-lg-5 py-5" id="Home">
       <div class="p-5 bg-gradient text-white">
         <div class="container-1">
-            <h1 class="display-3">WELCOME TO LOREAM!</h1>
+            <h1 class="display-3">WELCOME TO LOREM!</h1>
             <p class="lead">Melayani Kebutuhan Digital Marketing Anda</p>
             <p class="lead">
                 <a class="btn btn-info btn-lg " href="Jumbo action link" role="button">Order Now</a>
             </p>
         </div>
+      </div>
+    </section>
+    <section class="my-5" id="Porotfolio">
+    <div class="container">
+          <h2 class="section-header text-center">Portofolio</h2>
+          <p class="text-center mb-4 text-content">
+              -Lorem ipsum dolor sit-
+          </p>
+        <div class="row gy-4 me-4">
+            <div class="col-lg-6 col-sm-8 col-6">
+              <div class="card mb-3">
+                  <img src="img/Screenshot (153).png" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">HTML CSS PROJEK</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                  <div class="card-footer bg-white">
+                      <a href="img/Screenshot (153).png" class="btn btn-info">Demo</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6 col-sm-8 col-6">
+              <div class="card mb-3">
+                  <img src="img/Screenshot (319).png" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">BOOTSTRAP PROJEK</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                  <div class="card-footer bg-white">
+                      <a href="img/Screenshot (319).png" class="btn btn-info">Demo</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6 col-sm-8 col-6">
+              <div class="card mb-3">
+                  <img src="img/Screenshot (320).png" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">JAVASCRIPT PROJEK</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                  <div class="card-footer bg-white">
+                      <a href="img/Screenshot (320).png" class="btn btn-info">Demo</a>
+                  </div>
+              </div>
+          </div>
+      </div>
     </div>
-</div>
+</section>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
