--- a/home.html
+++ b/home.html
@@ -21,13 +21,14 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav ms-auto" >
-                <a class="nav-link active" aria-current="page" href="#Home">Home</a>
-                <a class="nav-link" aria-current="page" href="#Portofolio">Portofolio</a>
-                <a class="nav-link" href="#AboutUs">About us</a>
-                <a class="nav-link" href="#Contact">Contact</a>
-                <a class="nav-link" href="#Todos">Todos</a>
-              </div>
+              <ul class="navbar-nav nav ms-auto">
+                <li class="nav-item"><a href="#Home" class="nav-link"><span>Home</span></a></li>
+                <li class="nav-item"><a href="#Portfolio" class="nav-link"><span>Portfolio</span></a></li>
+                <li class="nav-item"><a href="#Blog" class="nav-link"><span>Blog</span></a></li>
+                <li class="nav-item"><a href="#About" class="nav-link"><span>About Us</span></a></li>
+                <li class="nav-item"><a href="#Contact" class="nav-link"><span>Contact Us</span></a></li>
+                <li class="nav-item"><a href="#Todos" class="nav-link"><span>Todos</span></a></li>
+              </ul>
             </div>
           </div>
       </nav>
@@ -42,9 +43,9 @@
         </div>
       </div>
     </section>
-    <section class="my-5" id="Porotfolio">
+    <section class="my-5" id="Portfolio">
     <div class="container">
-          <h2 class="section-header text-center">Portofolio</h2>
+          <h2 class="section-header text-center">Portfolio</h2>
           <p class="text-center mb-4 text-content">
               -Lorem ipsum dolor sit-
           </p>
