--- a/home.html
+++ b/home.html
@@ -43,6 +43,7 @@
         </div>
       </div>
     </section>
+
     <section class="my-5" id="Portfolio">
     <div class="container">
           <h2 class="section-header text-center">Portfolio</h2>
@@ -91,6 +92,42 @@
           </div>
       </div>
     </div>
+</section>
+
+<section class="about spad" id="About">
+  <h2 class="section-header text-center">About Us</h2>
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-12">
+              <div class="about__pic">
+                  <img src="img/online-marketing.png" alt="">
+              </div>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-lg-4 col-md-4 col-sm-6">
+              <div class="about__item">
+                  <h4>Who We Are ?</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Est quasi veniam placeat dolorum consectetur, repellat officia eveniet. Atque, molestiae quos?</p>
+              </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6">
+              <div class="about__item">
+                  <h4>Who We Do ?</h4>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Totam, consectetur pariatur. Hic quas temporibus harum omnis maiores. Magni, provident?</p>
+              </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6">
+              <div class="about__item">
+                  <h4>Why Choose Us</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Quae similique soluta nobis sequi! Ducimus eum, tempore magnam nam soluta culpa aperiam!</p>
+              </div>
+          </div>
+      </div>
+  </div>
 </section>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
