--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
               -Lorem ipsum dolor sit-
           </p>
         <div class="row gy-4 me-4">
-            <div class="col-lg-6 col-sm-8 col-6">
+            <div class="col-lg-4 col-sm-8 col-6">
               <div class="card mb-3">
                   <img src="img/Screenshot (153).png" class="card-img-top">
                   <div class="card-body">
@@ -100,7 +100,7 @@
                   </div>
               </div>
           </div>
-          <div class="col-lg-6 col-sm-8 col-6">
+          <div class="col-lg-4 col-sm-8 col-6">
               <div class="card mb-3">
                   <img src="img/Screenshot (319).png" class="card-img-top">
                   <div class="card-body">
@@ -113,7 +113,7 @@
                   </div>
               </div>
           </div>
-          <div class="col-lg-6 col-sm-8 col-6">
+          <div class="col-lg-4 col-sm-8 col-6">
               <div class="card mb-3">
                   <img src="img/Screenshot (320).png" class="card-img-top">
                   <div class="card-body">
@@ -164,6 +164,41 @@
           </div>
       </div>
   </div>
+</section>
+<section class="team spad">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-title text-center">
+                    <span>Our Team</span>
+                    <h2>Meet Our Team</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="team__item text-center">
+                    <img class="w-100" src="img/avatar.png" alt="">
+                    <h4>Rikza Fatyamulya</h4>
+                    <span>Web Developer</span>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="team__item text-center">
+                    <img class="w-100" src="img/avatar.png" alt="">
+                    <h4>Afi Arafa</h4>
+                    <span>Web Developer</span>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="team__item text-center">
+                    <img class="w-100" src="img/avatar.png" alt="">
+                    <h4>Aditya Tri Prasetyo</h4>
+                    <span>Web Developer</span>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
