--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
                 <li class="nav-item"><a href="#Blog" class="nav-link"><span>Blog</span></a></li>
                 <li class="nav-item"><a href="#About" class="nav-link"><span>About Us</span></a></li>
                 <li class="nav-item"><a href="#Contact" class="nav-link"><span>Contact Us</span></a></li>
-                <li class="nav-item"><a href="#Todos" class="nav-link"><span>Todos</span></a></li>
+                <li class="nav-item"><a href="toDo.html" class="nav-link"><span>Todos</span></a></li>
               </ul>
             </div>
           </div>
@@ -123,6 +123,53 @@
                   </div>
                   <div class="card-footer bg-white">
                       <a href="img/Screenshot (320).png" class="btn btn-info">Demo</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+    </div>
+</section>
+
+<section class="my-5" id="Blog">
+    <div class="container">
+          <h2 class="section-header text-center">BLOG</h2>
+          <p class="text-center mb-4 text-content">
+              -Our Daily Dose of Internet-
+          </p>
+        <div class="row gy-4 me-4">
+            <div class="col-lg-4 col-sm-8 col-6">
+              <div class="card blogCard mb-3">
+                  <img src="https://miro.medium.com/max/750/1*dcbm6xKIGa3NXivbbsTNVQ.jpeg" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">5 Python Projects to Automate Your Life: From Beginner to Advanced</h5>
+                    <p class="card-text">If you’re learning Python, you should try to automate your everyday tasks.</p>
+                  </div>
+                  <div class="card-footer bg-white">
+                      <a href="https://towardsdatascience.com/5-python-projects-to-automate-your-life-from-beginner-to-advanced-90fe29a7d664" class="btn btn-info">Read More</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-4 col-sm-8 col-6">
+              <div class="card blogCard mb-3">
+                  <img src="https://miro.medium.com/max/640/0*VnrCqvSI7We4mFTX" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">I was a crazy crypto miner</h5>
+                    <p class="card-text">A true story of how I went all-in mining cryptocurrencies during the first gold rush of Bitcoin in 2013.</p>
+                  </div>
+                  <div class="card-footer bg-white">
+                      <a href="https://joonaskoppa.medium.com/i-was-a-crazy-crypto-miner-dabebc276306" class="btn btn-info">Read More</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-4 col-sm-8 col-6">
+              <div class="card blogCard mb-3">
+                  <img src="https://miro.medium.com/max/750/0*-tmdszGX3aSCITm7" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">Steve Job’s Formula: How to be Successful at Anything</h5>
+                    <p class="card-text">Steve Jobs needs no introduction. His impact on your life cannot be ignored.</p>
+                  </div>
+                  <div class="card-footer bg-white">
+                      <a href="https://levelup.gitconnected.com/steve-jobs-formula-how-to-be-successful-at-anything-bc2366b0aa9" class="btn btn-info">Read More</a>
                   </div>
               </div>
           </div>
