added Contact Us

--- a/home.html
+++ b/home.html
@@ -248,6 +248,38 @@
     </div>
 </section>
 
+<footer class="blue">
+    <h1 class="text-center text-white p-2">Contact Us</h1>
+    <div class="zone blue grid-wrapper">
+        <div class="box zone text-center">
+            <a href="https://github.com/rikzafm" class="text-white h3">
+                <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="">
+                rikzafm
+            </a>
+        </div>
+        <div class="box zone text-center">
+            <a href="https://github.com/Adriyo96" class="text-white h3">
+                <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="">
+                adriyo96
+            </a>
+        </div>
+        <div class="box zone text-center">
+            <a href="https://github.com/Afi250301" class="text-white h3">
+                <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="">
+                afi250301
+            </a>
+        </div>
+        <div class="box zone text-center">
+            <a href="https://mailchi.mp/4e821fc91124/startup" class="text-white h3">
+                <img src="https://cdn-icons-png.flaticon.com/512/5968/5968928.png" alt="">
+                Mailchimp
+            </a>
+        </div>
+    </div> 
+</footer>
+
+
+    
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
       crossorigin="anonymous"></script>
