added todo without syling

--- a/toDo.html
+++ b/toDo.html
@@ -14,15 +14,17 @@
 <body>
     <div id="mainContainer" class="container bg-white rounded-4 p-4">
         <a class="navbar-brand" href="home.html">HOME</a>
-        <input class="inputBox" type="text" placeholder="Add New Todo">
+        <input id="inputBox" class="inputBox" type="text" placeholder="Add New Todo">
 
-        <div class="todo-list">
+        <!-- <div class="todo-list">
             <div class="todo-item">
                 <input class="checker" type="checkbox">
                 <span>Create theme</span>
                 <button class="deleteButton">X</button>
             </div>
-        </div>
+        </div> -->
+
+        <ul id="list"></ul>
     </div>
 
 
