--- a/toDo.html
+++ b/toDo.html
@@ -13,16 +13,8 @@
 </head>
 <body>
     <div id="mainContainer" class="container bg-white rounded-4 p-4">
-        <a class="navbar-brand" href="home.html">HOME</a>
+        <a class="navbar-brand title" href="home.html">HOME</a>
         <input id="inputBox" class="inputBox" type="text" placeholder="Add New Todo">
-
-        <!-- <div class="todo-list">
-            <div class="todo-item">
-                <input class="checker" type="checkbox">
-                <span>Create theme</span>
-                <button class="deleteButton">X</button>
-            </div>
-        </div> -->
 
         <ul id="list"></ul>
     </div>
