--- a/toDo.html
+++ b/toDo.html
@@ -12,12 +12,16 @@
     <link rel="stylesheet" href="Css/toDo.css">
 </head>
 <body>
-    <div id="mainContainer" class="container bg-white rounded-4 p-4">
-        <a class="navbar-brand title" href="home.html">HOME</a>
+    <nav class="navbar sticky-top navbar-light bg-dark">
+        <a class="navbar-brand text-white p-2" href="home.html">LOREM</a>
+    </nav>
+    <h1 class="text-center p-5 display-1">TO-DO LIST</h1>
+    <main id="mainContainer" class="container bg-white rounded-4 p-4 text-center">
+        
         <input id="inputBox" class="inputBox" type="text" placeholder="Add New Todo">
 
         <ul id="list"></ul>
-    </div>
+    </main>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
