--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
 
     <section class="my-5" id="Portfolio">
     <div class="container">
-          <h2 class="section-header text-center">Portfolio</h2>
+          <h2 class="section-header text-center" style="padding-top:5rem;">Portfolio</h2>
           <p class="text-center mb-4 text-content">
               -Lorem ipsum dolor sit-
           </p>
@@ -132,7 +132,7 @@
 
 <section class="my-5" id="Blog">
     <div class="container">
-          <h2 class="section-header text-center">BLOG</h2>
+          <h2 class="section-header text-center" style="padding-top:5rem;">BLOG</h2>
           <p class="text-center mb-4 text-content">
               -Our Daily Dose of Internet-
           </p>
@@ -178,7 +178,7 @@
 </section>
 
 <section class="about spad" id="About">
-  <h2 class="section-header text-center">About Us</h2>
+  <h2 class="section-header text-center" style="padding-top:5rem;">About Us</h2>
   <div class="container">
       <div class="row">
           <div class="col-lg-12">
@@ -248,7 +248,7 @@
     </div>
 </section>
 
-<footer class="blue">
+<footer class="blue" id="Contact">
     <h1 class="text-center text-white p-2">Contact Us</h1>
     <div class="zone blue grid-wrapper">
         <div class="box zone text-center">
