--- a/home.html
+++ b/home.html
@@ -84,7 +84,7 @@
     <div class="container">
           <h2 class="section-header text-center" style="padding-top:5rem;">Portfolio</h2>
           <p class="text-center mb-4 text-content">
-              -Lorem ipsum dolor sit-
+              -Our Team Project-
           </p>
         <div class="row gy-4 me-4">
             <div class="col-lg-4 col-sm-8 col-6">
@@ -191,22 +191,20 @@
           <div class="col-lg-4 col-md-4 col-sm-6">
               <div class="about__item">
                   <h4>Who We Are ?</h4>
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Est quasi veniam placeat dolorum consectetur, repellat officia eveniet. Atque, molestiae quos?</p>
+                  <p>Honest and Trustworthy Digital Advertising Program Company</p>
               </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-6">
               <div class="about__item">
                   <h4>What We Do ?</h4>
-                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Totam, consectetur pariatur. Hic quas temporibus harum omnis maiores. Magni, provident?</p>
+                  <p>Perform digital services in the form of websites, designs, and UI/UX skillfully and reliably</p>
               </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-6">
               <div class="about__item">
                   <h4>Why Choose Us</h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Quae similique soluta nobis sequi! Ducimus eum, tempore magnam nam soluta culpa aperiam!</p>
+                  <p>In this digital generation where information can be obtained easily in seconds, 
+                    digital marketing is indispensable. Get the best digital service with us!</p>
               </div>
           </div>
       </div>
