--- a/home.html
+++ b/home.html
@@ -181,7 +181,7 @@
   <h2 class="section-header text-center" style="padding-top:5rem;">About Us</h2>
   <div class="container">
       <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-12 col-sm-6">
               <div class="about__pic">
                   <img src="img/online-marketing.png" alt="">
               </div>
