todo list : bug fixes & now save checks

--- a/toDo.html
+++ b/toDo.html
@@ -15,7 +15,7 @@
     <nav class="navbar sticky-top navbar-light bg-dark">
         <a class="navbar-brand text-white p-2" href="home.html">LOREM</a>
     </nav>
-    <h1 class="text-center p-5 display-1">TO-DO LIST</h1>
+    <h1 class="text-center p-5">TO-DO LIST</h1>
     <main id="mainContainer" class="container bg-white rounded-4 p-4 text-center">
         
         <input id="inputBox" class="inputBox" type="text" placeholder="Add New Todo">
