--- a/home.html
+++ b/home.html
@@ -183,7 +183,7 @@
       <div class="row">
           <div class="col-lg-12">
               <div class="about__pic">
-                  <img src="img/online-marketing.png" alt="">
+                  <img class="w-100" src="img/online-marketing.png" alt="">
               </div>
           </div>
       </div>
