--- a/home.html
+++ b/home.html
@@ -180,9 +180,9 @@
 <section class="about spad" id="About">
   <h2 class="section-header text-center" style="padding-top:5rem;">About Us</h2>
   <div class="container">
-      <div class="row">
+      <div class="row d-flex justify-content-center">
           <div class="col-lg-12 col-sm-6">
-              <div class="about__pic">
+              <div class="about__pic ">
                   <img class="w-100" src="img/online-marketing.png" alt="">
               </div>
           </div>
